added block css lib to make pretty

--- a/index.html
+++ b/index.html
@@ -5,35 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="https://unpkg.com/blocks.css/dist/blocks.min.css" />
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator">
-        <div class="screen">
+        <div class="block fixed screen">
         </div>
         <div class="section1">
-            <button class="operator add">+</button>
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
+            <button class="block operator add">+</button>
+            <button class="block" id="7">7</button>
+            <button class="block" id="8">8</button>
+            <button class="block" id="9">9</button>
         </div>
         <div class="section2">
-            <button class="operator subtract">-</button>
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
+            <button class="block operator subtract">-</button>
+            <button class="block" id="4">4</button>
+            <button class="block" id="5">5</button>
+            <button class="block" id="6">6</button>
         </div>
         <div class="section3">
-            <button class="operator multiply">x</button>
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
+            <button class="block  operator multiply">x</button>
+            <button class="block" id="1">1</button>
+            <button class="block" id="2">2</button>
+            <button class="block" id="3">3</button>
         </div>
         <div class="section4">
-            <button class="operator divide">%</button>
-            <button id="0">0</button>
-            <button id="equals">=</button>
+            <button class="block operator divide">%</button>
+            <button class="block" id="0">0</button>
+            <button class="block operator" id="equals" style="width: 115px">=</button>
         </div>    
     </div>
 </body>
